<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"
        tools:override="true">Coinz</string>
    <string name="access_token">pk.eyJ1IjoibmlrNXkiLCJhIjoiY2pvcTBwZXl2MDAzdzNzbnJyenZrZnlwaSJ9.fR_NvKR6-gPMmTcp1nX5eA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_registered">Not registered?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="parent_val">parent</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="title_activity_messenger">MessengerActivity</string>


    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="maps_rates_dialog_no_bonus">Rate List unavailable! Buy the Bonus!</string>
    <string name="test_email">tp@tp.com</string>
    <string name="test_password">tptptp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="no_coins_available">No Coins Available</string>
    <string name="level">Level</string>
    <string name="gold_balance">Gold Balance</string>
    <string name="coins_collected_today">Coins Collected Today</string>
    <string name="coins_banked_today">Coins Banked Today</string>
    <string name="confirm">Confirm</string>
    <string name="coin_currency">Coin Currency</string>
    <string name="coin_value">Coin Value</string>
    <string name="shop">Shop</string>
    <string name="coins">Coins</string>
    <string name="gambling">Gambling</string>
    <string name="profile">Profile</string>
    <string name="shop_page_icon_desc">An icon for the bonus feature</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_description">Bonus Description</string>
    <string name="top_bar_desc">An obect used as a toolbar throughout Interactive and Maps activities</string>
    <string name="interactive_fo_to_map_desc">Icon for button that navigates to Maps from Interactive activities</string>
    <string name="interactive_go_to_login_desc">Icon for button that signs out the user and navigates to login from interactive activities.</string>
    <string name="coin_recycler_image_desc">Icon for each item in the recycler view of coins</string>
    <string name="coin_recycler_bank_coin_desc">Icon for button that banks the coin for each coin in the recycler view</string>
    <string name="coin_recycler_send_coin_desc">Icon for button in the recycler view of coins that open up a dialog where a user is able to send a coin to another user</string>
    <string name="maps_go_to_interactive_desc">An icon for the button that navigates from Maps Activity to Interactive Activity</string>
    <string name="maps_open_rates_dialog">An icon for button that opens a dialog of today\'s rates in Maps Activity</string>
    <string name="shop_gold_balance_icon_desc">An icon just for aesthetic reasons that resembles a gold coin and is displayed next to total gold balance in the shop fragment in the interactive activity</string>
    <string name="next">Next</string>
    <string name="previous">previous</string>
</resources>
