...
    android:id="@+id/fragment_shop"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/shop_pager"
        android:layout_width="0dp"
        android:layout_height="441dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shop_page_back_button"
        app:layout_constraintStart_toEndOf="@+id/shop_page_next_button"
        app:layout_constraintTop_toBottomOf="@+id/shop_pager"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/shop_gold_balance"
        android:layout_width="wrap_content"
...
