...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_page_title"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/shop_page_buy"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/orange_button"
        android:text=""
...
