...
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/maps_go_to_interactive_desc"
        android:id="@+id/maps_go_to_interactive"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        app:srcCompat="@drawable/ic_interactive2"
        mapbox:layout_constraintEnd_toEndOf="parent"
...
